# trapstreet-mvp

./: .env.example  .gitignore  README.md  drizzle.config.ts  package.json  pnpm-lock.yaml
cli/: CLAUDE.md  PLAN.md  README.md  pyproject.toml
cli/docs/: index.md  quickstart.md
cli/docs/guides/: cost-tracking.md  writing-solution.md
cli/docs/reference/: cli.md  trap-yaml.md  traptask-yaml.md
cli/docs/todo/: io_improvement.md  website_compactible.md
cli/examples/echo/solution/: trap.yaml
cli/examples/echo/task/: grader.py  judge.py  traptask.yaml
cli/examples/llm-qa/solution-anthropic/: solution.py  trap.yaml
cli/examples/llm-qa/solution-claude-code/: solution.py  trap.yaml
cli/examples/llm-qa/solution-mistral/: solution.py  trap.yaml
cli/examples/llm-qa/solution-multi/: solution.py  trap.yaml
cli/examples/llm-qa/solution-openai/: solution.py  trap.yaml
cli/examples/llm-qa/task/: grader.py  judge.py  traptask.yaml
cli/examples/reference/solution/: solution.py  trap.yaml
cli/examples/reference/task/: grader.py  judge.py  traptask.yaml
cli/examples/reference/task/expected/basic/: expected.json
cli/examples/reference/task/expected/edge-empty/: expected.json
cli/examples/reference/task/inputs/basic/: input.json
cli/examples/reference/task/inputs/edge-empty/: input.json
cli/examples/word-count/solution/: trap.yaml  word_count.py
cli/examples/word-count/task/: judge.py  traptask.yaml
cli/src/trap/: cli.py  git_meta.py  loader.py
cli/src/trap/auth/: __init__.py  client.py  login.py  oauth.py  store.py
cli/src/trap/cli/: __init__.py  _auth.py
cli/src/trap/cost/: providers.py
cli/src/trap/display/: __init__.py  progress.py  submit.py
cli/src/trap/environment/: __init__.py  detector.py
cli/src/trap/git_ops/: __init__.py  base.py  local.py  provenance.py  remote.py  repo.py  rev.py  url.py
cli/src/trap/loader/: __init__.py  trap_yaml.py  traptask_yaml.py
cli/src/trap/models/: __init__.py  config.py  environment.py  provenance.py  report.py  task.py  trap_yaml.py  traptask_yaml.py
cli/src/trap/report/: __init__.py  handle.py  rich.py  saver.py
cli/src/trap/runner/: __init__.py  capture.py  case.py  grader.py  judge.py  layout.py  task.py
docs/: api-v0.md  deploy.md  glossary.md
src/: auth.ts
src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
src/app/api/leaderboard/: route.ts
src/app/api/me/: route.ts
src/app/api/runners/: route.ts
src/app/api/runs/: route.ts
src/app/api/tasks/: route.ts
src/app/api/threads/: route.ts
src/app/cli/authorize/: page.tsx
src/app/docs/: content.ts  page.tsx
src/app/docs/build-a-solution/: page.tsx
src/app/docs/quick-start/: page.tsx
src/app/runners/new/: RunnerForm.tsx  (+1 more)
src/app/settings/: MyTasks.tsx  page.tsx
src/app/threads/: page.tsx
src/components/: auth-actions.tsx  copyable-code.tsx  docs-nav.tsx  manta-logo.tsx  markdown.tsx  profile-list.tsx  task-tabs.tsx
src/db/: client.ts  reset.ts  schema.ts  seed.ts
src/lib/: api.ts  format.ts  github-prefill.ts  github-task.ts  queries.ts  types.ts
(+13 files in other folders)
