[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "trapstreet-cli"
dynamic = ["version"]
description = "tp — non-invasive CLI testing framework for AI workflows. Submits results to trapstreet.run."
readme = "README.md"
license = "MIT"
authors = [{ name = "AntiNoise", email = "hcshu@dlyai.com" }]
keywords = ["eval", "ai", "llm", "benchmark", "trapstreet", "agent", "workflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]
# 3.13 not 3.14: pydantic 2.13 has a typing._eval_type incompatibility
# with Python 3.14. Drop the floor when upstream lands a fix.
requires-python = ">=3.13"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "loguru>=0.7",
    "httpx>=0.27",
    "tokencost>=0.1.26",
    "requests>=2.34.2",
    "gitpython>=3.1",
    "psutil>=7.2.2",
    "py-cpuinfo>=9.0.0",
]

[project.urls]
Homepage = "https://trapstreet.run"
Repository = "https://github.com/AntiNoise-ai/trapstreet-mvp"
Issues = "https://github.com/AntiNoise-ai/trapstreet-mvp/issues"

[project.scripts]
tp = "trap.cli:app"

[tool.hatch.version]
source = "vcs"

# Restrict hatch-vcs to tags shaped like `cli-vX.Y.Z`. Lets us tag CLI
# releases independently of the web app in the same repo. Options are
# forwarded to setuptools_scm; `root = ".."` because the .git lives
# in the parent (this is a subdir-packaged CLI inside the trapstreet
# monorepo). `fallback_version` keeps untagged builds working.
[tool.hatch.version.raw-options]
root = ".."
tag_regex = "^cli-v(?P<version>.+)$"
# `git describe` must also be told to only consider cli-v* tags, otherwise it
# picks the nearest tag of any kind (e.g. the monorepo-wide `mvp-v1.0.0`) and
# then fails to parse it against tag_regex. tag_regex alone only parses; this
# restricts which tags are candidates.
git_describe_command = "git describe --dirty --tags --long --match cli-v*"
fallback_version = "0.0.0.dev0"

[tool.hatch.build.hooks.vcs]
version-file = "src/trap/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/trap"]

[tool.hatch.build.targets.sdist]
include = ["src/trap", "README.md", "pyproject.toml"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.9",
    "mkdocs-material>=9.0",
]

[tool.uv.workspace]
exclude = ["examples/*"]

[tool.ruff]
line-length = 110
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "RUF"]

[tool.ruff.lint.per-file-ignores]
"src/trap/_version.py" = ["RUF022"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
